test/spec_vectors/i64/fail/module_12.wat
(module (func (result i64) (i64.shr_s (i32.const 0) (f32.const 0))))